ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: ui-service
      port:
        number: 80
  rules:
  - http:
      paths:
      # 1. SPECIFIC PATHS FIRST
      - path: /admin.html
        pathType: Exact
        backend:
          service:
            name: ui-service
            port:
              number: 80
              
      - path: /api/products/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-3-service
            port:
              number: 80

      - path: /api/write/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-1-service
            port:
              number: 80

      - path: /grafana
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana-service
            port:
              number: 80
              
      - path: /api/read/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-2-service
            port:
              number: 80

      # 2. CATCH-ALL ROUTE ABSOLUTE LAST
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ui-service
            port:
              number: 80
